--- a/public/css/home.css
+++ b/public/css/home.css
@@ -165,7 +165,7 @@
         text-align: center;
         width: 100%;
         color: #E64A19;
-        background-color: #ffffff;
+        background-color: #fcf3f3;
     }
     
     .icon-text {
@@ -181,6 +181,7 @@
         color: #E64A19;
         outline: none;
         display: block;
+
     }
     
     .image {
@@ -815,17 +816,23 @@
     }
     
     .icon-center {
-        /*  padding-top: 10px;
+        margin-left: 20px;
+        padding-top: 8px;
         margin-top: -30px;
-        background-color: #cca0a0 !important;
-        width: 90px;
-        height: 80px;
+        background-color:   #E64A19 !important;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         outline: 0;
-        color: #E64A19 !important;
-        box-shadow: 0 0 0 .25rem rgba(255, 255, 255) */
+        color: #ffffff !important;
+        box-shadow: 0 0 0 .25rem rgba(255, 255, 255) 
+
     }
+   .icon-center .active {
+    color: #ffffff;
+   }
     
     .text-color {
+        padding-top: 20px;
         color: #E64A19 !important;
     }
