--- a/public/css/home.css
+++ b/public/css/home.css
@@ -841,7 +841,26 @@
         width: 60% !important;
         
     }
-.center-shop {
-    display: flex;
-    justify-content: center;
-}
+    .center-shop {
+        display: flex;
+        justify-content: center;
+    }
+    .bottom1 {
+        border-radius: 20px;
+    }
+    .active1 {
+        height: 120px;
+        background-color: rgb(240, 44, 44)           
+    }
+    .box1 {
+        width: 1540px;
+        height: 200PX;
+        background-color: rgb(255, 255, 255);
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+    .imgas {
+        width:70px;
+        height: 50px;
+    }
+    
