--- a/public/css/home.css
+++ b/public/css/home.css
@@ -854,13 +854,15 @@
     }
     .box1 {
         width: 1540px;
-        height: 200PX;
+        height: 180PX;
         background-color: rgb(255, 255, 255);
         margin-top: 30px;
-        margin-left: 30px;
+        margin-left: 20px;
+        border-radius: 10px;
     }
     .imgas {
-        width:70px;
-        height: 50px;
+        margin-top: 15px;
+        width: 120px;
+        height: 120px;
     }
     
