--- a/public/css/home.css
+++ b/public/css/home.css
@@ -847,14 +847,14 @@
     }
     .active1 {
         height: 120px;
-        background-color: rgb(240, 44, 44)           
+        background-color:#E64A19           
     }
     .box1 {
         width: 90%;
         height: 180PX;
         background-color: rgb(255, 255, 255);
         margin-top: 30px;
-       margin-left: 5%;
+        margin-left: 5%;
         border-radius: 10px;
     }
     .imgas {
