--- a/public/css/home.css
+++ b/public/css/home.css
@@ -929,10 +929,17 @@
         height: 100%;
         position: absolute;
         margin-top: 0px;
-        padding: 20px;
+        padding: 0px 20px 20px 20px;
     
     }
 
     .navbar-Footer2 {
         padding-bottom: 100px;
+    }
+    .margin-bottom2 {
+        margin-bottom: 40px;
+    } 
+    .nav-bottom {
+        margin-bottom: 70px;
+        z-index: 0;
     }
