--- a/public/css/home.css
+++ b/public/css/home.css
@@ -975,3 +975,17 @@
     .btn-primary {
         color: #000000;
     }
+    /* .box-3{
+        width: 95%;
+        height: 350px;
+        background-color: rgb(161, 190, 210);
+        margin-top: 150px;
+        margin-left: 4%; 
+    }
+    .box-4{
+        width: 94%;
+        height: 280px;
+        background-color: rgb(244, 244, 245);
+        padding-top: 20px;
+        margin-left: 3%;
+    } */
