--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1038,6 +1038,10 @@
         font-size: 15px;
         margin-right: 75%;
     }
+    .money5 {
+        width: 70%;
+        margin-left: 20%;
+    }
     .btn-light:hover {
         background: #efefef;
         color: #6b6b6b;
@@ -1045,4 +1049,18 @@
     .btn-light:focus {
         background-color:#E64A19;
     }
-   
+    .box-3 {
+        width: 80%;
+        height: 100%;
+        background-color: rgb(154, 164, 248);
+        padding-top: 5px;
+        margin-top: 100px;
+        margin-left: 10%;
+    }
+    .box-4 {
+        margin-top: 20px;
+        height: 280px;
+        margin-left: 10px;
+        margin-right: 20px;
+    }
+
