--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1050,15 +1050,9 @@
         background-color:#E64A19;
     }
     .box-3 {
-        background-color: rgb(154, 164, 248);
+        background-color: #fd7e14;
         padding-top: 10px;
         margin-top: 100px;
-    }
-    .box-4 {
-        margin-top: 20px;
-        height: 280px;
-        margin-left: 10px;
-        margin-right: 20px;
     }
     .bank1 {
         margin-top: -50px;
@@ -1069,10 +1063,22 @@
     .bank3 {
         line-height: 50px;
         font-size: 20px;
-        color: #6b6b6b;
-        background: #efefef;
+        color: #000000;
+        background: rgb(237 243 251);
         border-radius: 8px;
-        margin-top: 10px;
+        margin-top: 5px;
         font-weight: bold;
     }
+    .bank4 {
+        width: 100%;
+        height: 48px;
+        background: #E64A19;
+        line-height: 30px;
+        font-size: 18px;
+        color: #ffffff;
+        text-align: center;
+        border-radius: 20px;
+        margin-top: 30px;
+    }
+    
 
