--- a/public/css/home.css
+++ b/public/css/home.css
@@ -595,6 +595,8 @@
         color: #000000;
         background-color: rgb(237, 243, 251);
      } 
+
+
     
     .inpput-text {
         width: 100%;
@@ -840,7 +842,7 @@
     
     .text-color {
         padding-top: 23px;
-        color: #000000 !important;
+        color: #E64A19 !important;
     }
     .width-height {
         margin-top: 30px;
@@ -1080,5 +1082,62 @@
         border-radius: 20px;
         margin-top: 30px;
     }
-    
+   .calc_btn_row {
+        margin-bottom: 0.8%;
+        text-align: center;
+   }
+   .calc_btn {
+        background-color: #fff;
+        border: none;
+        color: #000;
+        padding: 10px ;
+        font-size: 15px;
+        width: 30%;
+        font-weight: bold;
+        border-radius: 10px;
+   }
 
+   .calc_btn:active {
+    background-color: #E64A19;
+    border: none;
+    color: #000;
+    padding: 10px ;
+    font-size: 15px;
+    width: 30%;
+    font-weight: bold;
+    border-radius: 10px;
+    }
+    .calc_btnNull {
+        background-color: #fff;
+        border: none;
+        color: #000;
+        padding: 10px ;
+        font-size: 15px;
+        width: 30%;
+        font-weight: bold;
+        border-radius: 10px;
+    }
+    .calc_btnNull:active {
+        background-color: #E64A19;
+        border: none;
+        color: #000;
+        padding: 10px ;
+        font-size: 15px;
+        width: 30%;
+        font-weight: bold;
+        border-radius: 10px;
+    }
+    .icon-color:active {
+        color: #ffffff;
+    }
+   .calc1 {
+        background-color: #fff;
+        border: none;
+        color: #000;
+        padding: 10px ;
+        font-size: 15px;
+        width: 14%;
+        font-weight: bold;
+        border-radius: 10px;
+        text-align: center;
+   }
