--- a/public/css/home.css
+++ b/public/css/home.css
@@ -705,7 +705,7 @@
     
     .input-back {
         background-color:rgb(255, 255, 255);;
-        color: #fff;
+        color: #000;
         border: rgb(255, 255, 255);;
         border-bottom: 1px solid rgb(255, 255, 255);;
     }
