--- a/public/css/home.css
+++ b/public/css/home.css
@@ -132,8 +132,16 @@
             max-width: 90%;
         }
     }
+    @font-face {
+        font-family: 'Light';
+        font-style: normal;
+        font-weight: normal;
+        src: url(../catalyst/FCCatalyst.ttf);
+      
+      }
     
     body {
+        font-family: 'Light' !important;
         margin: 0;
         font-family: var(--bs-body-font-family);
         font-size: var(--bs-body-font-size);
